--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarText">
                         <ul class="navbar-nav">
-                            <li class="nav-item active"><a class="nav-link" href="" style="font-weight: 600;">Home</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="" style="font-weight: 600;">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" style="font-weight: 600;">Services</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="index.html" style="font-weight: 600;">Home</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="about.html" style="font-weight: 600;">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="services.html" style="font-weight: 600;">Services</a></li>
                             <li class="nav-item"><a class="nav-link" href="" style="font-weight: 600;">Team</a></li>
 
                             <li class="nav-item"><a class="nav-link" href="" style="font-weight: 600;">Blog</a></li>
@@ -96,7 +96,7 @@
         <!-- container -->
     </header>
 
-    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="1" id="offcanvasDarkNavbar1" aria-labelledby="offcanvasDarkNavbarLabel1">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">EduCafe International</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -166,6 +166,7 @@
     </div>
     </div>
 
+
     <!-- Hero Section -->
     <section class="pt-hero">
         <div class="pt-hero-slider">
@@ -173,7 +174,22 @@
                 <div class="pt-hero-overlay">
                     <div class="container">
                         <div class="row justify-content-center pt-hero-overlay-row">
-                            
+                            <div class="heroinfo">
+                                <div class="certainWord">
+                                    <h3>Hey!!! Wondering How To Get Aboard...</h3>
+                                </div>
+
+                                <div class="buttonforit">
+                                    <div class="contactusbtn" style="margin-right: 30px;"> 
+                                        <a href="contact.html#contact">Contact Us</a>
+
+                                    </div>
+                                    <div class="eligibitytestbtn">
+                                        <a href="eligibility.html#form"> Test Your Eligibility</a>
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
